# mssdk-airflow-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
dags/: __init__.py  dag_utils.py  extract_file.py  extract_notices_from_api.py  postgres_dag.py  process_file.py  process_notices.py  transformation_dag.py
infra/: docker-compose.yaml
infra/airflow/: Dockerfile  docker-compose.yaml
infra/grafana/: docker-compose.yaml  grafana-datasources.yaml  prometheus.yml
infra/marquez/: docker-compose.yaml
infra/open-telemetry/: docker-compose.yaml  otel-collector-config.yml
infra/traefik/: docker-compose.yml
mssdk_airflow_pipeline/: __init__.py
mssdk_airflow_pipeline/adapters/: rml_mapper.py
mssdk_airflow_pipeline/services/: notice_transformation.py
tests/: __init__.py
tests/test_data/example_notices/: 373731-2024.xml
tests/test_data/example_rdf/: 373731-2024.rdf.ttl
tests/unit/: conftest.py  test_notice_transformation.py
